# deep-research-bot

./: .env  .gitignore  AGENTS.md  Agata_agent.ipynb  CLAUDE.md  README.md  agata_agent.py  eval.py  eval_simple_agent.py  pyproject.toml  test_eval.ipynb  update_agent_rules.py
.openhands/microagents/: repo.md
deep_research_bot/: agent.py  ruler.py  tools.py  utils.py
deep_research_bot/evaluation/: eval.py  eval_config.py  judge_prompts.py
evaluation/: eval.py  eval_config.py  judge_prompts.py
nbs/: 01_simple_agent.ipynb  tools.py  utils.py
notebooks/: 01_simple_agent.ipynb  02_deep_research_agent.ipynb  03_rl_for_deep_research_agent.ipynb  eval_simple_agent.py  max_context_window.json  sa.py  tools.py  utils.py
tests/: __init__.py
