[project]
name = "deep-research-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exa-py>=1.16.1",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "openai>=2.3.0",
    "rich>=14.2.0",
    "simple-parsing>=0.1.7",
    "weave>=0.52.9",
]
